More fixes on small screens

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -153,6 +153,7 @@ h3 {
     flex-direction: row;
     align-items: center;
     margin: 2em 3em 0;
+    justify-content: center;
 }
 
 .modal-content {
@@ -227,6 +228,7 @@ h3 {
     flex-grow: 1;
     margin: 0 2em;
     padding: 0.5em 1.5em;
+    max-width: 30em;
 }
 
 #inputMessage:focus, #inputMessage:hover {
@@ -247,6 +249,7 @@ h3 {
     border-radius: 50%;
     box-shadow: 0px 0px 6px rgba(54, 54, 54, 0.185);
     align-self: center;
+    min-width: 2em;
 }
 
 #submitMessage:hover {
@@ -315,4 +318,12 @@ h3 {
      .currentChatInput{
          margin: 2em 0.3em;
      }
+}
+
+@media(max-width: 420px) {
+
+    #inputMessage {
+        margin: 0 0.5em 0 0;
+        max-width: 70vw;
+    }
 }
